[gd_scene load_steps=4 format=3 uid="uid://n3dj8jh4drb6"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_t8w36"]
[ext_resource type="PackedScene" uid="uid://cwp4u07m523wm" path="res://connect_scene.tscn" id="2_qnb14"]
[ext_resource type="PackedScene" uid="uid://bpwt6601esmp2" path="res://host_scene.tscn" id="3_1qjf8"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 644.0
script = ExtResource("1_t8w36")

[node name="start_screen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="start_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 390.0
offset_top = 86.0
offset_right = 758.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 77
text = "HOST"

[node name="Connect" type="Button" parent="start_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 387.0
offset_top = 262.0
offset_right = 761.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 77
text = "CONNECT"

[node name="Connect_scene" parent="." instance=ExtResource("2_qnb14")]
visible = false
layout_mode = 1

[node name="Host_scene" parent="." instance=ExtResource("3_1qjf8")]
visible = false
layout_mode = 1

[node name="Back_button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 458.0
offset_top = 467.0
offset_right = 725.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 100
text = "BACK"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 553.0
offset_right = 359.0
offset_bottom = 618.0
theme_override_font_sizes/font_size = 40
text = "Open user folder"

[connection signal="button_up" from="start_screen/Host" to="." method="_on_host_button_up"]
[connection signal="button_up" from="start_screen/Connect" to="." method="_on_connect_button_up"]
[connection signal="button_up" from="Back_button" to="." method="_on_back_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
