[gd_scene load_steps=6 format=3 uid="uid://n3dj8jh4drb6"]

[ext_resource type="Script" path="res://скрипты/main_menu.gd" id="1_t8w36"]
[ext_resource type="PackedScene" uid="uid://cwp4u07m523wm" path="res://сцены/connect_scene.tscn" id="2_qnb14"]
[ext_resource type="PackedScene" uid="uid://bpwt6601esmp2" path="res://сцены/host_scene.tscn" id="3_1qjf8"]
[ext_resource type="PackedScene" uid="uid://bwad82u5xwnhb" path="res://сцены/settings_screen.tscn" id="4_1a2ow"]
[ext_resource type="Texture2D" uid="uid://ddahg0i7o6kg" path="res://images/logo.png" id="4_8u1lk"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchor_right = 0.998
anchor_bottom = 0.994
offset_right = 0.303955
offset_bottom = -0.112
script = ExtResource("1_t8w36")

[node name="start_screen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -116.0
offset_right = 187.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="start_screen"]
layout_mode = 2
theme_override_font_sizes/font_size = 77
text = "MAIN_MENU_HOST_BUTTON"

[node name="Connect" type="Button" parent="start_screen"]
layout_mode = 2
theme_override_font_sizes/font_size = 77
text = "MAIN_MENU_CONNECT_BUTTON"

[node name="Settings" type="Button" parent="start_screen"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "MAIN_MENU_SETTINGS_BUTTON"

[node name="User_folder_button" type="Button" parent="start_screen"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Open user folder"

[node name="Connect_scene" parent="." instance=ExtResource("2_qnb14")]
visible = false
layout_mode = 1

[node name="Host_scene" parent="." instance=ExtResource("3_1qjf8")]
visible = false
layout_mode = 1

[node name="Settings_screen" parent="." instance=ExtResource("4_1a2ow")]
visible = false
layout_mode = 1

[node name="logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -449.5
offset_top = 3.0
offset_right = 449.5
offset_bottom = 102.0
grow_horizontal = 2
texture = ExtResource("4_8u1lk")

[node name="Back_button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -267.0
offset_top = -145.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "BACK"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "debug"

[node name="android_FileDialog" type="FileDialog" parent="."]
mode = 2
title = "Open a Directory"
initial_position = 1
size = Vector2i(700, 400)
ok_button_text = "Выбрать текущую папку"
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
horizontal_alignment = 1

[connection signal="button_up" from="start_screen/Host" to="." method="_on_host_button_up"]
[connection signal="button_up" from="start_screen/Connect" to="." method="_on_connect_button_up"]
[connection signal="pressed" from="start_screen/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="start_screen/User_folder_button" to="." method="_on_user_folder_button_pressed"]
[connection signal="button_up" from="Back_button" to="." method="_on_back_button_button_up"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
